[tool.poetry]
name = "Homie4"
version = "0.4.1"
description = "Homie 4.0.0 Implementation"
authors = ["Michael Cumming <mike@4831.com>"]
packages = [
    { include = "homie", from = "." }
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mjcumming/homie4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
keywords = ["HOMIE", "MQTT"]

[tool.poetry.dependencies]
python = "^3.11"
paho-mqtt = ">=1.3.0,<2"
netifaces = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"